fixed bugs in bet views.

--- a/Gobot/Gobot/Content/Home.css
+++ b/Gobot/Gobot/Content/Home.css
@@ -63,7 +63,7 @@ img {
   color: #ffbf5c !important; }
 
 .offw, offw {
-  color: #eeeeee; }
+  color: #eeeeee !important; }
 
 .menuColor,
 menuColor {
