--- a/Gobot/Gobot/Content/Menu.css
+++ b/Gobot/Gobot/Content/Menu.css
@@ -64,7 +64,7 @@ img {
   color: #ffbf5c !important; }
 
 .offw, offw {
-  color: #eeeeee; }
+  color: #eeeeee !important; }
 
 .menuColor,
 menuColor {
