--- a/Gobot/Gobot/Content/_global.scss
+++ b/Gobot/Gobot/Content/_global.scss
@@ -30,7 +30,7 @@ img                         { border: 0; }
 .red, red       { color: $red; }
 .white, white   { color: white; }
 .orange, orange { color: $orange !important; }
-.offw, offw     { color: $off-white; }
+.offw, offw     { color: $off-white !important; }
 .menuColor, 
 menuColor       { color: $orange !important; }
 
