--- a/Gobot/Gobot/Views/Stats/Schedule.cshtml
+++ b/Gobot/Gobot/Views/Stats/Schedule.cshtml
@@ -60,11 +60,13 @@
         {
             int year = Model[0].Date.Year;
             int firstDay = Model[0].Date.DayOfYear, secondDay = Model[0].Date.AddDays(1).DayOfYear;
+            System.Globalization.CultureInfo cult = (System.Globalization.CultureInfo)Session["cultureInfo"];
+
             for (int i = 0; i < Model.Count && (Model[i].Date.DayOfYear == firstDay || Model[i].Date.DayOfYear == secondDay); i++)
             {
                 if (i != 0 && Model[i].Date.DayOfYear != Model[i - 1].Date.DayOfYear)
                 {
-                    <div class="info day"><h2>@(Model[i].Date.ToString("dddd")) <grey>@Model[i].Date.ToString("dd/MM/yyyy")</grey></h2></div>
+                    <div class="info day"><h2>@(cult.DateTimeFormat.GetDayName(Model[i].Date.DayOfWeek)) <grey>@Model[i].Date.ToString("dd/MM/yyyy")</grey></h2></div>
                 }
 
                 <div class="info">
