Created method to add exp and video watched to user + fixed bugs.

--- a/Gobot/Gobot/Views/Account/Index.cshtml
+++ b/Gobot/Gobot/Views/Account/Index.cshtml
@@ -168,7 +168,7 @@
     <div class="info" id="matches">
         <div class="info_logo"></div>
         <div>
-            <h1>0<grey> PARTIES REGARDÉES</grey></h1>
+            <h1>@Model.gamesWatched<grey> PARTIES REGARDÉES</grey></h1>
         </div>
         @{
             if (Model.favoriteTeam != null)
