--- a/Gobot/Gobot/Views/Watch/Index.cshtml
+++ b/Gobot/Gobot/Views/Watch/Index.cshtml
@@ -76,6 +76,16 @@
 
 @section Scripts {
     <script>
+        $(function() {
+            $.ajax({
+                type: "POST",
+                url: "/Watch/SetWatched",
+                data: JSON.stringify(""),
+                dataType: "json",
+                success: function () {},
+                contentType: "application/json"
+            });
+        });
         $(window).ready(function () {
             setVideoPos();
         });
