corrected button 'Acheter des crédits de gobotter' to 'Acheter des crédits Gobot'.

--- a/Gobot/Gobot/Views/Account/Index.cshtml
+++ b/Gobot/Gobot/Views/Account/Index.cshtml
@@ -145,7 +145,7 @@
             <div>
                 <a href="@Url.Action("Ad", "Bet")" class="darkBG">
                     <h2>ACHETER DES CRÉDITS</h2>
-                    <h3 class="grey">DE GOBOTTER</h3>
+                    <h3 class="grey">GOBOT</h3>
                 </a>
             </div>
         }
