modified and added images.

--- a/Gobot/Gobot/Views/Shared/_Layout.cshtml
+++ b/Gobot/Gobot/Views/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
         <a id="équipes" href="@Url.Action("Teams", "Stats")">
             <div style="background-image: url(@Url.Content("~/Images/teams.png"))"></div>
         </a>
+        <a id="publicité" href="@Url.Action("Ad", "Bet")">
+            <div style="background-image: url(@Url.Content("~/Images/gcCredit_white.png"))"></div>
+        </a>
         @*<a id="inventaire" href="#">
             <div style="background-image: url(@Url.Content("~/Images/inventory.png"))"></div>
         </a>*@
