--- a/Gobot/Gobot/Views/Account/Index.cshtml
+++ b/Gobot/Gobot/Views/Account/Index.cshtml
@@ -144,8 +144,8 @@
         {
             <div>
                 <a href="@Url.Action("Ad", "Bet")" class="darkBG">
-                    <h2>ACHETER DES CRÉDITS</h2>
-                    <h3 class="grey">GOBOT</h3>
+                    <h2>ACHETER</h2>
+                    <h3 class="grey">DES CRÉDITS GOBOT</h3>
                 </a>
             </div>
         }
