--- a/Gobot/Gobot/Content/Account.scss
+++ b/Gobot/Gobot/Content/Account.scss
@@ -52,8 +52,8 @@ html, body { min-height: 100%; }
         height: $imgWidth;
         width: $imgWidth;
         border-radius: 50%;
-        border: 10px solid $darkerGrey;
-        background-color: $darkerGrey;
+        border: 10px solid $infoBgColor;
+        background-color: $infoBgColor;
         margin-left: 10px;
     }
 
