--- a/Gobot/Gobot/Content/Account.css
+++ b/Gobot/Gobot/Content/Account.css
@@ -67,8 +67,8 @@ html, body {
     height: 128px;
     width: 128px;
     border-radius: 50%;
-    border: 10px solid #1f1f1f;
-    background-color: #1f1f1f;
+    border: 10px solid #232323;
+    background-color: #232323;
     margin-left: 10px; }
   #accountInfo > div:last-of-type {
     float: right; }
