--- a/Gobot/Gobot/Views/Stats/Teams.cshtml
+++ b/Gobot/Gobot/Views/Stats/Teams.cshtml
@@ -70,7 +70,7 @@
 
             data.onreadystatechange = function () {
                 if (data.readyState == 4) {
-                    loading_remove(true);
+                    loading_remove(true, false, false);
                     var team = JSON.parse(data.response);
 
                     $('<div class="team_info h"></div>').insertAfter(prev);
