--- a/Gobot/Gobot/Content/_global.scss
+++ b/Gobot/Gobot/Content/_global.scss
@@ -287,6 +287,7 @@ menuColor       { color: $orange !important; }
 
         > .lastMatch {
             width: auto;
+            padding-bottom: 30px !important;
 
             h2, h3 { width: 100%; margin: 0 0 2px 0; text-align: center; }
 
