Added smaller versions of images + modified link in EOM popUp to reference to those instead of the bigger ones for faster loading.

--- a/Gobot/Gobot/Views/Shared/_Layout.cshtml
+++ b/Gobot/Gobot/Views/Shared/_Layout.cshtml
@@ -109,7 +109,7 @@
                          <div class="imgTeam"><img src="/Images/' + json.next.teams[0].img + '"/></div>\
                          <div><h2>' + json.next.teams[0].name + '<grey> VS </grey>' + json.next.teams[1].name + '</h2></div>\
                          <div class="imgTeam smallerImg"><img src="/Images/' + json.next.teams[1].img + '"/></div>\
-                         <div class="map"><h2><grey>DANS LA CARTE </grey>' + json.next.map + '</h2><img src="/Images/maps/' + json.next.map + '.png"/></div>\
+                         <div class="map"><h2><grey>DANS LA CARTE </grey>' + json.next.map + '</h2><img src="/Images/maps/' + json.next.map + '_small.png"/></div>\
                       </div>\
                 </div>';
         }
