Fixed display of some things in /Account/Index.

--- a/Gobot/Gobot/Views/Account/Index.cshtml
+++ b/Gobot/Gobot/Views/Account/Index.cshtml
@@ -93,7 +93,7 @@
     <div class="info" id="credits">
         <div class="info_logo"></div>
         <div>
-            <h1>@Html.DisplayFor(model => model.Credits)<b> GOBOT CREDITS</b></h1>
+            <h1>@Html.DisplayFor(model => model.Credits)<b> CRÉDITS GOBOT</b></h1>
             @*<h4 class="grey">1 Gobot credit = 0.01$</h4>*@
         </div>
         @{
@@ -135,7 +135,7 @@
     <div class="info" id="creditStats">
         <div class="info_logo"></div>
         <div>
-            <h1 id="wonLoss"><green>@Model.totalWon</green>/<red>@Model.totalLoss</red> GAGNÉS/PERDUS</h1>
+            <h1 id="wonLoss"><green>@Model.totalWon</green>/<red>@Model.totalLoss</red> CRÉDITS GAGNÉS/PERDUS</h1>
         </div>
         @*<div>
                 <h1>0<grey> ACHETÉS</grey></h1>
