--- a/Gobot/Gobot/Content/_global.scss
+++ b/Gobot/Gobot/Content/_global.scss
@@ -466,7 +466,7 @@ menuColor       { color: $orange !important; }
     cursor: pointer;
     background-size: 15px !important;
     background-color: $infoBgColor !important;
-    z-index: 895;
+    z-index: 895 !important;
 }
     #toTop { background: no-repeat center url(/Images/up_dark.png); left: 55px; }
     #toBottom { background: no-repeat center url(/Images/down_dark.png); }
