--- a/Gobot/Gobot/Views/Bet/ad.cshtml
+++ b/Gobot/Gobot/Views/Bet/ad.cshtml
@@ -69,12 +69,14 @@
             h_align_window($("#getCredit_btn"));
             v_align_window($("#getCredit_btn"));
 
-            setTimeout(function () {
-                $("body").prepend('<div id="getCredit_container"><div id="getCredit_btn"><h1>Réclamer mes crédits</h1></div></div>');
-                h_align_window($("#getCredit_btn"));
-                v_align_window($("#getCredit_btn"));
-                player.pause();
-            }, 30 * 1000);
+            if (window.canRunAds != undefined) {
+                setTimeout(function () {
+                    $("body").prepend('<div id="getCredit_container"><div id="getCredit_btn"><h1>Réclamer mes crédits</h1></div></div>');
+                    h_align_window($("#getCredit_btn"));
+                    v_align_window($("#getCredit_btn"));
+                    player.pause();
+                }, 30 * 1000);
+            }
         })
 
         $(window).resize(function () {
